version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CDB/TBPTCommand.rst.txt
.. vale off



:class:`TBPTCommand`
====================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CDB.TBPTCommand(iTBPTCommandObj: Ansys.Common.Interop.FEParsePlugin_ANSYS.ITBPTCommand)

   Bases: :py:obj:`object`


   
   Represents a TBPT command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: TBPTCommand

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FullName`
            - FullName property.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Lab`
            - Gets the label.
          * - :py:attr:`~Mat`
            - Gets the material number.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Npts`
            - Gets the number of points, if provided.
          * - :py:attr:`~Ntemp`
            - Gets the number of temperature, if provided.
          * - :py:attr:`~TBPTData`
            - Gets TBPT data items.
          * - :py:attr:`~TBPTDataCount`
            - Gets the number of TBPT data.
          * - :py:attr:`~Tbopt`
            - Gets the option.
          * - :py:attr:`~ToCdbCommandString`
            - ToCdbCommandString property.







Property detail
---------------
.. py:property:: FullName
   :type: Optional[str]


   
   FullName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[str]


   
   Gets the label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Mat
   :type: Optional[int]


   
   Gets the material number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Npts
   :type: Optional[int]


   
   Gets the number of points, if provided.
















   ..
       !! processed by numpydoc !!

.. py:property:: Ntemp
   :type: Optional[int]


   
   Gets the number of temperature, if provided.
















   ..
       !! processed by numpydoc !!

.. py:property:: TBPTData
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.TBPTData]]


   
   Gets TBPT data items.
















   ..
       !! processed by numpydoc !!

.. py:property:: TBPTDataCount
   :type: Optional[int]


   
   Gets the number of TBPT data.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tbopt
   :type: Optional[str]


   
   Gets the option.
















   ..
       !! processed by numpydoc !!

.. py:property:: ToCdbCommandString
   :type: Optional[Ansys.ACT.Automation.Mechanical.FE.CDB.CdbCommandFormatAndParameter]


   
   ToCdbCommandString property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on